# pyppeteer-pdf

./: .gitignore  pyproject.toml  requirements.txt  setup.py
pyppeteer_pdf/: cli.py
tests/: test_pyppeteer_pdf.py
